--- a/lab401.html
+++ b/lab401.html
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML>
 <html>
   <head>
     <title>This is my first web page.</title>
@@ -6,6 +7,11 @@
 
       <p>This is my first web page...</p>
       
+    <h1>About Me</h1>
+      <p>Hello! My name is Jordan Lestenkof. I am a geography student at MSU Denver. 
+        Originally, I am from Seattle, but I have lived in Denver for the past couple years and I love it!</p>
+
+    <h2>What is this for?</h2>
+      <p>This document is for Lab 4 of my Web Mapping class. Hello Dr. Parr!</p>
     </body>
-  </head>
 </html>
