--- a/lab403.html
+++ b/lab403.html
@@ -8,7 +8,7 @@
       <p>This is my third web page...</p>
       
     <h1>Hello!</h1>
-      <img src= "Daisy.jpg" />
+      <img src= "Daisy.jpeg" />
       <p>Hello! My name is Jordan Lestenkof. I am a geography student at MSU Denver. 
         Originally, I am from Seattle, but I have lived in Denver for the past couple years and I love it!</p>
       <p> I work at <a href= https://hillstonerestaurant.com/locations/denver/>Hillstone Restaurant.</a></p>
