--- a/lab501.html
+++ b/lab501.html
@@ -31,6 +31,22 @@
       font-family: times;
       text-align: center;
     }
+
+    p, li {
+      font-size: 10px;
+      font-family: times;
+    }
+    h1, h2 {
+      font-family: times;
+      background-color: #c3bee6;
+    }
+    a{ text-decoration: none; }
+    a:visited {background-color: #9c98b8;}
+    a:link {background-color: #6755f2;}
+    a:hover {background-color: #bd1a79;}
+
+    #favclothes {
+      background-color: #c3bee6;}
                 
   </style>
   </head>
