--- a/lab502.html
+++ b/lab502.html
@@ -3,7 +3,50 @@
   <head>
     <title>This is my fourth web page.</title>
   <style>
-    
+    body {width: 100%;}  
+    #container {
+      width: 70%;
+      text-align: left;
+      margin: 0px auto;
+    }
+    #photo {
+      background-color: #03fcca;
+      margin-left: auto;
+      margin-right: 0;
+      float: right;
+      width: 200px;
+    }
+    #Daisy {
+      height: auto;
+      width: 150px;
+      border: 1px solid #8aa7a8;
+      border-radius: 50%;
+      padding: 5px;
+      display: block;
+      margin: auto;
+    }
+
+    .caption{
+      font-size: 10px;
+      font-family: times;
+      text-align: center;
+    }
+
+    p, li {
+      font-size: 10px;
+      font-family: times;
+    }
+    h1, h2 {
+      font-family: times;
+      background-color: #c3bee6;
+    }
+    a{ text-decoration: none; }
+    a:visited {background-color: #9c98b8;}
+    a:link {background-color: #0a0a0a;}
+    a:hover {background-color: #bd1a79;}
+
+    #favclothes {
+      background-color: #c3bee6;}
   </style>
   </head>
   
