--- a/lab502.html
+++ b/lab502.html
@@ -41,9 +41,9 @@
       background-color: #c3bee6;
     }
     a{ text-decoration: none; }
-    a:visited {background-color: #9c98b8;}
-    a:link {background-color: #6755f2;}
-    a:hover {background-color: #bd1a79;}
+    a:visited {background-color: #faf3b4;}
+    a:link {background-color: #faf3b4;}
+    a:hover {background-color: #faf3b4;}
 
     #favclothes {
       background-color: #c3bee6;}
