--- a/lab502.html
+++ b/lab502.html
@@ -33,7 +33,7 @@
     }
 
     p, li {
-      font-size: 10px;
+      font-size: 12px;
       font-family: times;
     }
     h1, h2 {
@@ -41,9 +41,8 @@
       background-color: #c3bee6;
     }
     a{ text-decoration: none; }
-    a:visited {background-color: #faf3b4;}
     a:link {background-color: #faf3b4;}
-    a:hover {background-color: #faf3b4;}
+    a:hover {background-color: #f79eb9;}
 
     #favclothes {
       background-color: #c3bee6;}
