--- a/lab502.html
+++ b/lab502.html
@@ -45,7 +45,9 @@
     a:hover {background-color: #f79eb9;}
 
     #favclothes {
-      background-color: #c3bee6;}
+      background-color: #c3bee6;
+      padding: 5px;
+    }
                 
   </style>
   </head>
