--- a/lab502.html
+++ b/lab502.html
@@ -39,6 +39,7 @@
     h1, h2 {
       font-family: times;
       background-color: #c3bee6;
+      padding: 5px;
     }
     a{ text-decoration: none; }
     a:link {background-color: #faf3b4;}
