--- a/lab503.html
+++ b/lab503.html
@@ -5,7 +5,7 @@
   <style>
   body {width: 100%;}  
     #container {
-      width: 70%;
+      width: 80%;
       text-align: left;
       margin: 0px auto;
     }
@@ -33,20 +33,22 @@
     }
 
     p, li {
-      font-size: 10px;
+      font-size: 12px;
       font-family: times;
     }
     h1, h2 {
       font-family: times;
       background-color: #c3bee6;
+      padding: 5px;
     }
     a{ text-decoration: none; }
-    a:visited {background-color: #9c98b8;}
-    a:link {background-color: #6755f2;}
-    a:hover {background-color: #bd1a79;}
+    a:link {background-color: #faf3b4;}
+    a:hover {background-color: #f79eb9;}
 
     #favclothes {
-      background-color: #c3bee6;}
+      background-color: #c3bee6;
+      padding: 5px;
+    }
                 
   </style>
   </head>
