--- a/lab503.html
+++ b/lab503.html
@@ -37,7 +37,7 @@
       font-family: times;
     }
     h1, h2 {
-      font-family: times;
+      font-family: helvetica;
       background-color: #c3bee6;
       padding: 5px;
     }
