--- a/lab503.html
+++ b/lab503.html
@@ -49,6 +49,10 @@
       background-color: #c3bee6;
       padding: 5px;
     }
+
+    li {
+      background-color: faf3b4;}
+    
                 
   </style>
   </head>
