--- a/lab503.html
+++ b/lab503.html
@@ -35,6 +35,7 @@
     p, li {
       font-size: 12px;
       font-family: times;
+      background-color: #faf3b4;
     }
     h1, h2 {
       font-family: helvetica;
@@ -49,9 +50,6 @@
       background-color: #c3bee6;
       padding: 5px;
     }
-
-    li {
-      background-color: faf3b4;}
     
                 
   </style>
