--- a/lab503.html
+++ b/lab503.html
@@ -35,7 +35,6 @@
     p, li {
       font-size: 12px;
       font-family: times;
-      background-color: #faf3b4;
     }
     h1, h2 {
       font-family: helvetica;
@@ -49,6 +48,7 @@
     #favclothes {
       background-color: #c3bee6;
       padding: 5px;
+      li background-color: #faf3b4;}
     }
     
                 
