--- a/lab503.html
+++ b/lab503.html
@@ -11,6 +11,7 @@
     }
     #photo {
       background-color: #03fcca;
+      margin-top: 5px;
       margin-left: auto;
       margin-right: 0;
       float: right;
