--- a/lab503.html
+++ b/lab503.html
@@ -11,7 +11,6 @@
     }
     #photo {
       background-color: #03fcca;
-      margin-top: 5px;
       margin-left: auto;
       margin-right: 0;
       float: right;
@@ -24,7 +23,7 @@
       border-radius: 50%;
       padding: 5px;
       display: block;
-      margin: auto;
+      margin: 10px;
     }
 
     .caption{
