--- a/lab503.html
+++ b/lab503.html
@@ -23,7 +23,7 @@
       border-radius: 50%;
       padding: 5px;
       display: block;
-      margin-top: 10px;
+      margin: auto;
     }
 
     .caption{
