--- a/lab601.html
+++ b/lab601.html
@@ -75,6 +75,7 @@
 
     <div id="photo">
       <img id="Daisy" src= "Daisy.jpeg" />
+      <button id="button1">Hide image</button>
       <p class="caption"> My dog, Daisy</p>
       <p class="caption"> Photo by author</p>
     </div>
