--- a/lab601.html
+++ b/lab601.html
@@ -59,6 +59,9 @@
   <script>
       //this is my javascript
     $(document).ready( function() {
+      $("button1").click( function() {
+        $("Daisy").fadeToggle();
+      });
     });
   </script>
   </head>
