--- a/lab601.html
+++ b/lab601.html
@@ -60,6 +60,7 @@
       //this is my javascript
     $(document).ready( function() {
       $("button1").click( function() {
+        console.log("clicked button1.");
         $("Daisy").fadeToggle();
       });
     });
