--- a/lab601.html
+++ b/lab601.html
@@ -59,9 +59,9 @@
   <script>
       //this is my javascript
     $(document).ready( function() {
-      $("button1").click( function() {
+      $("#button1").click( function() {
         console.log("clicked button1.");
-        $("Daisy").fadeToggle();
+        $("#Daisy").fadeToggle();
       });
     });
   </script>
