--- a/lab601.html
+++ b/lab601.html
@@ -63,6 +63,10 @@
         console.log("clicked button1.");
         $("#Daisy").fadeToggle();
       });
+
+      $("#appear").click( function() {
+        console.log("clicked on button appear.");
+        $("#hidden_text").text("#revealed_text");
     });
   </script>
   </head>
@@ -83,9 +87,13 @@
       <p class="caption"> My dog, Daisy</p>
       <p class="caption"> Photo by author</p>
     </div>
-      
+
+  
     <h2>What is this for?</h2>
-      <p>This document is for Lab 6 of my Web Mapping class. Hello Dr. Parr!</p>
+    <div id= "hidden_text">
+      <button id="appear">Click to reveal!</button>
+      <p id= "revealed_text">This document is for Lab 6 of my Web Mapping class. Hello Dr. Parr!</p>
+    </div>
 
     <div id="favclothes">
     <h1>My favorite things to wear</h1>
