--- a/lab601.html
+++ b/lab601.html
@@ -64,11 +64,8 @@
         $("#Daisy").fadeToggle();
       });
 
-      $("#appear").click( function() {
-        console.log("clicked on button appear.");
-        $("#hidden_text").text("#revealed_text");
-    });
   </script>
+    
   </head>
   
     <body>
@@ -92,7 +89,7 @@
     <h2>What is this for?</h2>
     <div id= "hidden_text">
       <button id="appear">Click to reveal!</button>
-      <p id= "revealed_text">This document is for Lab 6 of my Web Mapping class. Hello Dr. Parr!</p>
+      <p>This document is for Lab 6 of my Web Mapping class. Hello Dr. Parr!</p>
     </div>
 
     <div id="favclothes">
