--- a/lab601.html
+++ b/lab601.html
@@ -61,7 +61,7 @@
     $(document).ready( function() {
       $("#button1").click( function() {
         console.log("clicked button1.");
-        $("#Daisy").fadeToggle();
+        $("#Daisy").fadeToggle();}
       });
 
   </script>
