--- a/lab601.html
+++ b/lab601.html
@@ -62,6 +62,9 @@
       $("#button1").click( function() {
         console.log("clicked button1.");
         $("#Daisy").fadeToggle();})
+    $("#clicktoreveal1").click(function(){
+        console.log("clicked clicktoreveal1.")
+        $(#clicktoreveal1").html("This document is for Lab 6 of my Web Mapping class. Hello Dr. Parr!") });
       });
 
   </script>
@@ -87,10 +90,8 @@
 
   
     <h2>What is this for?</h2>
-    <div id= "hidden_text">
-      <button id="appear">Click to reveal!</button>
-      <p>This document is for Lab 6 of my Web Mapping class. Hello Dr. Parr!</p>
-    </div>
+      <button id="clicktoreveal1">Click to reveal!</button>
+  
 
     <div id="favclothes">
     <h1>My favorite things to wear</h1>
