--- a/lab601.html
+++ b/lab601.html
@@ -67,7 +67,7 @@
       
     $("#clicktoreveal1").click(function(){
           console.log("clicked clicktoreveal1.")
-        $(#hidden_text").text("Hello Dr. Parr!"); });
+        $("#hidden_text").text("Hello Dr. Parr!"); });
       });
 
   </script>
