--- a/lab601.html
+++ b/lab601.html
@@ -93,6 +93,7 @@
 
   
     <h2>What is this for?</h2>
+      <p>This document is for lab 6 of my Web Mapping class.</p>
     <div id= "hidden_text"> <button id="clicktoreveal1">Click to reveal!</button>
     </div>
   
