--- a/hangman.html
+++ b/hangman.html
@@ -50,7 +50,7 @@
                     
                     // if the letter has already been clicked on, 
                     // let the user know it's already been tried
-                    if (triedLetters.includes("letter")) {
+                    if (triedLetters.includes(letter)) {
                       $("#info").text("Letter "+letter+" already tried");
 
                     // if the letter isn't in the word, reduce
