--- a/lab7.html
+++ b/lab7.html
@@ -14,6 +14,11 @@
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
      crossorigin=""></script>
+
+  <script>
+    var map = L.map('map').setView([51.505, -0.09], 13);
+    
+  </script>
   </head>
 
   <body>
