--- a/lab7.html
+++ b/lab7.html
@@ -16,7 +16,7 @@
      crossorigin=""></script>
 
   <script>
-    var map = L.map('map').setView([51.505, -0.09], 13);
+    var map = L.map("map").setView([51.505, -0.09], 13);
     
   </script>
   </head>
