--- a/lab7.html
+++ b/lab7.html
@@ -1,23 +1,26 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>This is my first leafletjs map</title>
+    <title>My first leafletjs map</title>
 
-  <style>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+ <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
      crossorigin=""/>
+<style>
+      #map { height: 180px; }
+</style>
 
-    #map { height: 180px; }
-   </style>
+  
   </head>
 
   <body>
-  <div id="map"></div>
+
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
      crossorigin=""></script>
 
+    <div id="map"></div>
+    
     <script>
     var map = L.map("map").setView([51.505, -0.09], 13);
     L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
