--- a/lab7.html
+++ b/lab7.html
@@ -7,7 +7,7 @@
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
      crossorigin=""/>
 <style>
-      #map { height: 280px; }
+      #map { width: 600px; height: 400px; }
 </style>
 
   
