--- a/lab7.html
+++ b/lab7.html
@@ -7,7 +7,7 @@
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
      crossorigin=""/>
 <style>
-      #map { width: 100%; height: 800px; }
+      #map { width: 100%; height: 100%; }
 </style>
 
   
@@ -27,6 +27,7 @@
     maxZoom: 19,
     attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
     }).addTo(map);
+    var marker = L.marker([51.5, -0.09]).addTo(map);
     
     </script>
 
