--- a/lab7.html
+++ b/lab7.html
@@ -7,7 +7,7 @@
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
      crossorigin=""/>
 <style>
-      #map { width: 100%; height: 100%; }
+      #map { width: 600px; height: 400px }
 </style>
 
   
@@ -28,6 +28,12 @@
     attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
     }).addTo(map);
     var marker = L.marker([51.5, -0.09]).addTo(map);
+    var circle = L.circle([51.508, -0.11], {
+    color: 'red',
+    fillColor: '#f03',
+    fillOpacity: 0.5,
+    radius: 500
+}).addTo(map);
     
     </script>
 
