--- a/lab7.html
+++ b/lab7.html
@@ -7,7 +7,7 @@
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
      crossorigin=""/>
 <style>
-      #map { height: 100% }
+      #map { width: 100vw; height: 100vh }
 </style>
 
   
@@ -34,6 +34,11 @@
     fillOpacity: 0.5,
     radius: 500
 }).addTo(map);
+      var polygon = L.polygon([
+    [51.509, -0.08],
+    [51.503, -0.06],
+    [51.51, -0.047]
+]).addTo(map);
     
     </script>
 
