--- a/lab7.html
+++ b/lab7.html
@@ -7,7 +7,7 @@
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
      crossorigin=""/>
 <style>
-      #map { width: 100vw; height: 100vh }
+      #map { width: 90vw; height: 90vh }
 </style>
 
   
@@ -39,6 +39,9 @@
     [51.503, -0.06],
     [51.51, -0.047]
 ]).addTo(map);
+      marker.bindPopup("<b>Hello world!</b><br>I am a popup.").openPopup();
+      circle.bindPopup("I am a circle.");
+      polygon.bindPopup("I am a polygon.");
     
     </script>
 
