--- a/lab7.html
+++ b/lab7.html
@@ -42,6 +42,10 @@
       marker.bindPopup("<b>Hello world!</b><br>I am a popup.").openPopup();
       circle.bindPopup("I am a circle.");
       polygon.bindPopup("I am a polygon.");
+    var popup = L.popup()
+    .setLatLng([51.513, -0.09])
+    .setContent("I am a standalone popup.")
+    .openOn(map);
     
     </script>
 
