--- a/lab7.html
+++ b/lab7.html
@@ -46,6 +46,13 @@
     .setLatLng([51.513, -0.09])
     .setContent("I am a standalone popup.")
     .openOn(map);
+
+    function onMapClick(e) {
+    alert("You clicked the map at " + e.latlng);
+}
+
+map.on('click', onMapClick);
+
     
     </script>
 
