--- a/lab7.html
+++ b/lab7.html
@@ -47,11 +47,17 @@
     .setContent("I am a standalone popup.")
     .openOn(map);
 
-    function onMapClick(e) {
-    alert("You clicked the map at " + e.latlng);
+    var popup = L.popup();
+
+function onMapClick(e) {
+    popup
+        .setLatLng(e.latlng)
+        .setContent("You clicked the map at " + e.latlng.toString())
+        .openOn(map);
 }
 
 map.on('click', onMapClick);
+
 
     
     </script>
