--- a/lab7.html
+++ b/lab7.html
@@ -28,8 +28,8 @@
     attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
     }).addTo(map);
 
-
-
+    var marker = L.marker([47.30316,-122.43265]).addTo(map);
+      marker.bindPopup("<b>Hello world!</b><br>I am a popup.").openPopup();
     
     </script>
 
