--- a/lab7.html
+++ b/lab7.html
@@ -29,7 +29,7 @@
     }).addTo(map);
 
     var marker = L.marker([47.30316,-122.43265]).addTo(map);
-      marker.bindPopup("<b>Hello world!</b><br>I am a popup.").openPopup();
+      marker.bindPopup("<b>Browns Point, where I grew up!</b><br>This was my childhood home.").openPopup();
     
     </script>
 
