--- a/lab7.html
+++ b/lab7.html
@@ -36,7 +36,7 @@
     fillColor: '#f03',
     fillOpacity: 0.5,
     radius: 100
-    })
+    }).addTo(map);
       circle.bindPopup("The local beach!.");
 
     
