--- a/lab8.html
+++ b/lab8.html
@@ -68,7 +68,7 @@
 
 
 
-		var layerControl = L.control.layers(baseMaps, null).addto(map);
+		var layerControl = L.control.layers(baseMaps, null).addTo(map);
 
 		// let's add the Denver ACS data -- ##4 here
 		$.getJSON('./acs_denver_2021.geojson', function(data) {
