--- a/lab9.html
+++ b/lab9.html
@@ -91,12 +91,16 @@
 			return styleReturn;
 		}
 
-}
+})
 
 		// let's add the Denver ACS data -- ##4 here
 		$.getJSON('./acs_denver_2021.geojson', function(data) {
 			//convert the file (data) into a layer
-			acsDenver2021Layer = L.geoJSON(data, { style: style1 }
+			acsDenver2021Layer = L.geoJSON(data, { style: style1,
+				 onEachFeature : function(feature, layer) {
+				layer.bindPopup("Percent Poverty: " + 
+				feature.properties.PCT_POVERTY + "%");
+}
                                     ).addTo(map);
 			
 			//move the map to the area of the data
