--- a/lab9.html
+++ b/lab9.html
@@ -101,7 +101,7 @@
 				layer.bindPopup("Percent Poverty: " + 
 				feature.properties.PCT_POVERTY + "%");
 }
-                                    ).addTo(map);
+							     }).addTo(map);
 			
 			//move the map to the area of the data
 			map.panTo(acsDenver2021Layer.getBounds().getCenter())
