--- a/lab9.html
+++ b/lab9.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Lab 9 - Denver Neighborhood Data</title>
+	<title>Lab 9 - Denver Percent Age 65 Plus</title>
 	
 	<link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
 
@@ -71,7 +71,7 @@
 		var layerControl = L.control.layers(baseMaps, null).addTo(map);
 
     //function to style my cholopleth map
-    function style1(feature) {d = feature.properties.PCT_POVERTY;
+    function style1(feature) {d = feature.properties.PCT_AGE65PLUS;
 		answer = d > 30 ? '#800026' : 
 				d > 20 ? '#DB0026' : 
 				d > 15 ? '#E31A1C' : 
@@ -98,8 +98,8 @@
 			//convert the file (data) into a layer
 			acsDenver2021Layer = L.geoJSON(data, { style: style1,
 				 onEachFeature : function(feature, layer) {
-				layer.bindPopup("Percent Poverty: " + 
-				feature.properties.PCT_POVERTY + "%");
+				layer.bindPopup("Percent Age 65 Plus: " + 
+				feature.properties.AGE_65PLUS + "%");
 }
 							     }).addTo(map);
 			
@@ -126,8 +126,9 @@
 
 
 <div id="header">
-	<h1><a href="https://www.census.gov/programs-surveys/acs">Denver 2021 American Community Survey (Census) data</a></h1>
+	<h1>Denver Neighborhoods - Percent Age 65 And Up</h1>
 	<p>Data from <a href="https://denvergov.org/opendata/dataset/city-and-county-of-denver-american-community-survey-blk-grp-2017-2021">Denver Open Data</a></p>
+	<p><a href="https://www.census.gov/programs-surveys/acs">Denver 2021 American Community Survey (Census) data</a></p>
 </div>
 <div id="map"></div>
 
