--- a/lab10.html
+++ b/lab10.html
@@ -38,6 +38,21 @@
 		}
 		
 		a { text-decoration: none; color: inherit; }
+
+		.legend {
+			line-height: 18px;
+			color: #555;
+			background-color: #eeeeee;
+			padding: 2px;
+		}
+		.legend i {
+			width: 18px;
+			height: 18px;
+			float: left;
+			margin-right: 8px;
+			opacity: 0.8;
+		}
+		
 	</style>
 
 <script>
@@ -116,7 +131,23 @@
 			layerControl.addOverlay(newLayer, "Highway Markers");
 		});
 
+		var legend = L.control({position: 'bottomright'});
 
+		legend.onAdd = function (map) {
+			var div = L.domUtil.create('div', 'info legend');
+			colors = ['#FFEDA0', '#FED976', '#FEB24C', '#FD8D3C', '#FC4E2A', '#E31A1C', '#DB0026', '#800026'];
+			labels = ['0-1%', '1-5%', '5-10%', '10-15%', '15-20%', '20-30%', '30%+'];
+			div.innerHTML = '<h2>% Over 65</h2><br>';
+			for (var i = 0; i < colors.Length; i++) {
+				div.innerHTML += <i style = "background:' + colors[i] +'"></i>
+				'+ labels[i] + '<br>';
+			}
+
+			return div;
+		};
+
+		legend.addTo(map);
+			
 	// end document ready
 	});
 
