--- a/lab10.html
+++ b/lab10.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Lab 9 - Denver Percent Age 65 Plus</title>
+	<title>Lab 10 - Denver Percent Age 65 Plus</title>
 	
 	<link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
 
@@ -139,8 +139,7 @@
 			labels = ['0-1%', '1-5%', '5-10%', '10-15%', '15-20%', '20-30%', '30%+'];
 			div.innerHTML = '<h2>% Over 65</h2><br>';
 			for (var i = 0; i < colors.Length; i++) {
-				div.innerHTML += <i style = "background:' + colors[i] +'"></i>
-				'+ labels[i] + '<br>';
+				div.innerHTML += '<i style = "background:' + colors[i] +'"></i>' + labels[i] + '<br>';
 			}
 
 			return div;
