--- a/lab10.html
+++ b/lab10.html
@@ -136,9 +136,11 @@
 		legend.onAdd = function (map) {
 			var div = L.DomUtil.create('div', 'info legend');
 			colors = ['#FFEDA0', '#FED976', '#FEB24C', '#FD8D3C', '#FC4E2A', '#E31A1C', '#DB0026', '#800026'];
-			labels = ['0-1%', '1-5%', '5-10%', '10-15%', '15-20%', '20-30%', '30%+'];
+			labels = ['0 - 1%', '1 - 5%', '5 - 10%', '10 - 15%', '15 - 20%', '20 - 30%', '30%+'];
+			
 			div.innerHTML = '<h2>% Over 65</h2><br>';
-			for (var i = 0; i < colors.Length; i++) {
+			
+			for (var i = 0; i < colors.length; i++) {
 				div.innerHTML += '<i style = "background:' + colors[i] +'"></i>' + labels[i] + '<br>';
 			}
 
