--- a/finalproject.html
+++ b/finalproject.html
@@ -14,6 +14,12 @@
   </head>
 
   <body>
+
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+     crossorigin=""></script>
+
+    <div id="map"></div>
     
     <script>
 
