--- a/finalproject.html
+++ b/finalproject.html
@@ -24,16 +24,31 @@
     
     <script>
 $(document).ready(function() {
-  
-     var map = L.map("map").setView([39.7393, -104.9848], 13);
 
-    L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    maxZoom: 19,
-    attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-}).addTo(map);
+		map = L.map('map').setView([0,0], 10);
 
-  //json
-  $.getJSON('./acs_denver_2021.geojson', function(data) {
+		
+		var OSMTiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+			maxZoom: 19,
+			attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+		}).addTo(map);
+		var HOTOSMTiles = L.tileLayer('https://{s}.tile.openstreetmap.fr/hot/{z}/{x}/{y}.png', {
+			maxZoom: 19,
+    			attribution: '© OpenStreetMap contributors, Tiles style by Humanitarian OpenStreetMap Team hosted by OpenStreetMap France'});
+		var OpenTopoMap = L.tileLayer('https://{s}.tile.opentopomap.org/{z}/{x}/{y}.png', {
+			maxZoom: 19,
+			attribution: 'Map data: &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, <a href="http://viewfinderpanoramas.org">SRTM</a> | Map style: &copy; <a href="https://opentopomap.org">OpenTopoMap</a> (<a href="https://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA</a>)'});
+
+		var baseMaps = { "OpenStreetMap" : OSMTiles,
+			   "Humanitarian OSM" : HOTOSMTiles,
+              "OpenTopoMap" : OpenTopoMap };
+
+
+
+		var layerControl = L.control.layers(baseMaps, null).addTo(map);
+
+		
+		$.getJSON('./acs_denver_2021.geojson', function(data) {
 			
 			acsDenver2021Layer = L.geoJSON(data).addTo(map);
 			
@@ -46,7 +61,6 @@ $(document).ready(function() {
 			newLayer = L.geoJSON(data);
 			layerControl.addOverlay(newLayer, "Highway Markers");
 		});
-
   //end document ready
 });
     </script>
