--- a/finalproject.html
+++ b/finalproject.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Lab 8 - Denver Neighborhood Data</title>
+	<title>Final Project</title>
 	
 	<link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
 
@@ -40,14 +40,69 @@
 		a { text-decoration: none; color: inherit; }
 	</style>
 
-  <body>
-	  
+<script>
+
+        // the document ready wraps our javascript
+	// to make sure that everything loads in the 
+	// right order
+	$(document).ready(function() {
+
+		map = L.map('map').setView([0,0], 10);
+
+		
+		// let's add three sets of background tiles - one from OSM,  one from HOT OSM, and one from openTopoMap
+		var OSMTiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+			maxZoom: 19,
+			attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+		}).addTo(map);
+		var HOTOSMTiles = L.tileLayer('https://{s}.tile.openstreetmap.fr/hot/{z}/{x}/{y}.png', {
+			maxZoom: 19,
+    			attribution: '© OpenStreetMap contributors, Tiles style by Humanitarian OpenStreetMap Team hosted by OpenStreetMap France'});
+		var OpenTopoMap = L.tileLayer('https://{s}.tile.opentopomap.org/{z}/{x}/{y}.png', {
+			maxZoom: 19,
+			attribution: 'Map data: &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, <a href="http://viewfinderpanoramas.org">SRTM</a> | Map style: &copy; <a href="https://opentopomap.org">OpenTopoMap</a> (<a href="https://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA</a>)'});
+
+		var baseMaps = { "OpenStreetMap" : OSMTiles,
+			   "Humanitarian OSM" : HOTOSMTiles,
+              "OpenTopoMap" : OpenTopoMap };
+
+
+
+		var layerControl = L.control.layers(baseMaps, null).addTo(map);
+
+		// let's add the Denver ACS data -- ##4 here
+		$.getJSON('./acs_denver_2021.geojson', function(data) {
+			//convert the file (data) into a layer
+			acsDenver2021Layer = L.geoJSON(data).addTo(map);
+			
+			//move the map to the area of the data
+			map.panTo(acsDenver2021Layer.getBounds().getCenter())
+
+			//add the map to the layer controls
+			layerControl.addOverlay(acsDenver2021Layer, "Census 2021");
+		});
+
+		// let's try to add some remote DRCOG data
+		$.getJSON('https://data.colorado.gov/api/geospatial/trm9-dm4m?method=export&format=GeoJSON', function(data) {
+			newLayer = L.geoJSON(data);
+			layerControl.addOverlay(newLayer, "Highway Markers");
+		});
+
+
+	// end document ready
+	});
+
+</script>
+</head>
+<body>
+
+
 <div id="header">
 	<h1><a href="https://www.census.gov/programs-surveys/acs">Denver 2021 American Community Survey (Census) data</a></h1>
 	<p>Data from <a href="https://denvergov.org/opendata/dataset/city-and-county-of-denver-american-community-survey-blk-grp-2017-2021">Denver Open Data</a></p>
 </div>
-	  
 <div id="map"></div>
-  </body>
-  
+
+
+</body>
 </html>
