--- a/finalproject.html
+++ b/finalproject.html
@@ -70,11 +70,35 @@
 
 		var layerControl = L.control.layers(baseMaps, null).addTo(map);
 
+		    //function to style my cholopleth map
+    function style1(feature) {d = feature.properties.AGE_0_TO_9;
+		answer = d > 1000 ? '#800026' :  
+				d > 800 ? '#DB0026' : 
+				d > 500 ? '#FC4E2A' : 
+				d > 300 ? '#FD8D3C' : 
+					d > 200 ? '#FEB24C' : 
+					d > 100 ? '#FED976' : 
+							'#FFEDA0';
+			styleReturn = {
+				fillColor	: answer,
+				weight 	: 1,
+				opacity	: 1,
+				color		: 'white',
+				dashArray	: '3',
+				fillOpacity : 0.7
+			}
+			return styleReturn;
+		}
 
 		// let's add the Denver ACS data -- ##4 here
 		$.getJSON('./acs_denver_2021.geojson', function(data) {
 			//convert the file (data) into a layer
-			acsDenver2021Layer = L.geoJSON(data).addTo(map);
+			acsDenver2021Layer = L.geoJSON(data, , { style: style1,
+				 onEachFeature : function(feature, layer) {
+				layer.bindPopup("Children Age 0 to 9: " + 
+				feature.properties.AGE_0_TO_9);
+}
+							     }).addTo(map);
 			
 			//move the map to the area of the data
 			map.panTo(acsDenver2021Layer.getBounds().getCenter())
