--- a/finalproject.html
+++ b/finalproject.html
@@ -73,7 +73,7 @@
 		    //function to style my cholopleth map
     function style1(feature) {d = feature.properties.AGE_0_TO_9;
 		answer = d > 1000 ? '#800026' :  
-				d > 800 ? '#DB0026' : 
+				d > 700 ? '#DB0026' : 
 				d > 500 ? '#FC4E2A' : 
 				d > 300 ? '#FD8D3C' : 
 					d > 100 ? '#FEB24C' :  
@@ -114,6 +114,25 @@
 			layerControl.addOverlay(licensedChildLayer, "Licensed Childcare");
 		});
 
+		//legend
+		
+		var legend = L.control({position: 'bottomright'});
+
+		legend.onAdd = function (map) {
+			var div = L.DomUtil.create('div', 'info legend');
+			colors = ['#FFEDA0', '#FEB24C', '#FD8D3C', '#FC4E2A', '#DB0026', '#800026'];
+			labels = ['0-100', '100-300', '300-500', '500-700', '700-1000', '1000+'];
+			
+			div.innerHTML = '<h2>Children Age 0-9</h2><br>';
+			
+			for (var i = 0; i < colors.length; i++) {
+				div.innerHTML += '<i style = "background:' + colors[i] +'"></i>' + labels[i] + '<br>';
+			}
+
+			return div;
+		};
+
+		legend.addTo(map);
 	// end document ready
 	});
 
