--- a/finalproject.html
+++ b/finalproject.html
@@ -38,6 +38,21 @@
 		}
 		
 		a { text-decoration: none; color: inherit; }
+
+		
+		.legend {
+			line-height: 18px;
+			color: #555;
+			background-color: #eeeeee;
+			padding: 2px;
+		}
+		.legend i {
+			width: 18px;
+			height: 18px;
+			float: left;
+			margin-right: 8px;
+			opacity: 0.8;
+		}
 	</style>
 
 <script>
