--- a/finalproject.html
+++ b/finalproject.html
@@ -157,9 +157,8 @@
 
 
 <div id="header">
-	<h1><a href="https://www.census.gov/programs-surveys/acs">Denver 2021 American Community Survey (Census) data</a></h1>
-	<p>Data from <a href="https://denvergov.org/opendata/dataset/city-and-county-of-denver-american-community-survey-blk-grp-2017-2021">Denver Open Data</a></p>
-</div>
+	<h1>Map of licensed child care facilities in Denver County and number of children per neighborhood.</h1>
+	
 <div id="map"></div>
 
 
