--- a/finalproject.html
+++ b/finalproject.html
@@ -27,17 +27,12 @@
 		     font-size: 20px;
 		    }
 		
-		p { font: serif 10px;
-		    color: #3293a8;
-		  }
 		
 		#header {
 			width: 100%;
 			margin: auto;
 			align: center;
 		}
-		
-		a { text-decoration: none; color: inherit; }
 
 		
 		.legend {
@@ -158,6 +153,7 @@
 
 <div id="header">
 	<h1>Map of licensed child care facilities in Denver County and number of children per neighborhood.</h1>
+</div>
 	
 <div id="map"></div>
 
