--- a/finalproject.html
+++ b/finalproject.html
@@ -147,7 +147,10 @@
 	//click to view
 		  $("#clicktoview").click(function(){
           console.log("clicked clicktoview.")
-        $("#hidden_text").text("Hello Dr. Parr!"); });
+        $("#hidden_text").text("
+			       <p>American Community Survey Blk Grp 2017-2022 <a href="https://denvergov.org/opendata/dataset/city-and-county-of-denver-american-community-survey-blk-grp-2017-2021">Denver Open Data</a></p>
+				<p>Licensed Child Care Facilities 2023 <a href="https://www.denvergov.org/opendata/dataset/city-and-county-of-denver-licensed-child-care-facilities">Denver Open Data</a></p> 
+		"); });
 
 	// end document ready
 	});
